[IMPROVEMENT] Prevent overflow when displaying logfile

--- a/Resources/Private/Scss/dim/_layout.scss
+++ b/Resources/Private/Scss/dim/_layout.scss
@@ -10,6 +10,13 @@ h2 {
 	padding-bottom: .5em;
 }
 
+pre {
+	background: white;
+	max-width: 100%;
+	overflow: auto;
+	padding: 1em;
+}
+
 footer {
 	@include radius(0 $input-border-radius 0 0);
 	background: #fff;
