--- a/Resources/Public/CSS/style.css
+++ b/Resources/Public/CSS/style.css
@@ -7610,6 +7610,13 @@ h2 {
   padding-bottom: .5em;
 }
 
+pre {
+  background: white;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em;
+}
+
 footer {
   border-radius: 0 2px 0 0;
   background: #fff;
